Parser/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BCOMMENT
    BOOLEAN
    CASE
    COLON
    CONDOP
    DELETE
    DO
    GETP
    GETPROP
    LCOMMENT
    NEW
    REGEX
    SETP
    SETPROP
    SWITCH
    THIS
    WITH

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     block -> LEFTBRACE statements RIGHTBRACE
Rule 4     block -> LEFTBRACE RIGHTBRACE
Rule 5     statements -> statement statements
Rule 6     statements -> statement
Rule 7     statement -> assignment SEMICOLON
Rule 8     statement -> reassignment SEMICOLON
Rule 9     statement -> BREAK SEMICOLON
Rule 10    statement -> CONTINUE SEMICOLON
Rule 11    statement -> RETURN expression SEMICOLON
Rule 12    statement -> expression SEMICOLON
Rule 13    statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
Rule 14    statement -> functioncall SEMICOLON
Rule 15    statement -> if
Rule 16    statement -> ifelse
Rule 17    statement -> whileloop
Rule 18    statement -> forloop
Rule 19    statement -> funcdecl
Rule 20    assignment -> VAR assignlist
Rule 21    assignment -> LEFTPAREN assignment RIGHTPAREN
Rule 22    assignlist -> ID EQ expression COMMA assignlist
Rule 23    assignlist -> ID COMMA assignlist
Rule 24    assignlist -> arraydecl COMMA assignlist
Rule 25    assignlist -> ID EQ expression
Rule 26    assignlist -> ID
Rule 27    assignlist -> arraydecl
Rule 28    reassignment -> ID EQ expression
Rule 29    reassignment -> ID PLUSEQ expression
Rule 30    reassignment -> ID MINUSEQ expression
Rule 31    reassignment -> ID INTOEQ expression
Rule 32    reassignment -> ID DIVEQ expression
Rule 33    reassignment -> ID INCR
Rule 34    reassignment -> ID DECR
Rule 35    reassignment -> ID LSHIFTEQ expression
Rule 36    reassignment -> ID RSHIFTEQ expression
Rule 37    reassignment -> ID URSHIFTEQ expression
Rule 38    reassignment -> ID ANDEQ expression
Rule 39    reassignment -> ID OREQ expression
Rule 40    reassignment -> ID XOREQ expression
Rule 41    reassignment -> ID MODEQ expression
Rule 42    reassignment -> arraydecl
Rule 43    reassignment -> LEFTPAREN reassignment RIGHTPAREN
Rule 44    arraydecl -> ID EQ LEFTBRACKET arrayList RIGHTBRACKET
Rule 45    arrayList -> expression COMMA arrayList
Rule 46    arrayList -> arraydecl COMMA arrayList
Rule 47    arrayList -> arraydecl
Rule 48    arrayList -> expression
Rule 49    arrayList -> <empty>
Rule 50    expression -> EVAL LEFTPAREN statements RIGHTPAREN
Rule 51    expression -> EVAL LEFTPAREN block RIGHTPAREN
Rule 52    expression -> expression PLUS expression
Rule 53    expression -> expression MINUS expression
Rule 54    expression -> expression INTO expression
Rule 55    expression -> expression DIVIDE expression
Rule 56    expression -> expression MOD expression
Rule 57    expression -> expression EXPONENT expression
Rule 58    expression -> LEFTPAREN expression RIGHTPAREN
Rule 59    expression -> NOT expression
Rule 60    expression -> expression BINAND expression
Rule 61    expression -> expression BINOR expression
Rule 62    expression -> expression BINXOR expression
Rule 63    expression -> BINNOT expression
Rule 64    expression -> expression LT expression
Rule 65    expression -> expression GT expression
Rule 66    expression -> expression DOUBLEEQ expression
Rule 67    expression -> expression NOTEQUAL expression
Rule 68    expression -> expression LTE expression
Rule 69    expression -> expression GTE expression
Rule 70    expression -> expression STREQUAL expression
Rule 71    expression -> expression STRNEQUAL expression
Rule 72    expression -> expression AND expression
Rule 73    expression -> expression OR expression
Rule 74    expression -> expression LSHIFT expression
Rule 75    expression -> expression RSHIFT expression
Rule 76    expression -> expression URSHIFT expression
Rule 77    expression -> basicTypes
Rule 78    expression -> functioncall
Rule 79    expression -> arrayCall
Rule 80    expression -> TYPEOF expression
Rule 81    arrayCall -> ID LEFTBRACKET expression RIGHTBRACKET
Rule 82    basicTypes -> NUMBER
Rule 83    basicTypes -> STRING
Rule 84    basicTypes -> ID
Rule 85    basicTypes -> UNDEFINED
Rule 86    functioncall -> ID LEFTPAREN argList RIGHTPAREN
Rule 87    argList -> expression
Rule 88    argList -> expression COMMA argList
Rule 89    argList -> <empty>
Rule 90    if -> IF expression cblock
Rule 91    ifelse -> IF expression cblock ELSE cblock
Rule 92    ifelse -> IF expression cblock ELSE if
Rule 93    ifelse -> IF expression cblock ELSE ifelse
Rule 94    cblock -> block
Rule 95    cblock -> statement
Rule 96    whileloop -> WHILE LEFTPAREN expression RIGHTPAREN cblock
Rule 97    forloop -> FOR LEFTPAREN ID SEMICOLON cblock
Rule 98    initialization -> assignment SEMICOLON initialization
Rule 99    initialization -> reassignment SEMICOLON initialization
Rule 100   initialization -> assignment
Rule 101   initialization -> reassignment
Rule 102   increment -> reassignment SEMICOLON increment
Rule 103   increment -> reassignment
Rule 104   funcdecl -> FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
Rule 105   funcdecl -> VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
Rule 106   statement -> assignment
Rule 107   statement -> reassignment
Rule 108   statement -> BREAK
Rule 109   statement -> CONTINUE
Rule 110   statement -> expression
Rule 111   statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
Rule 112   statement -> functioncall

Terminals, with rules where they appear

AND                  : 72
ANDEQ                : 38
BCOMMENT             : 
BINAND               : 60
BINNOT               : 63
BINOR                : 61
BINXOR               : 62
BOOLEAN              : 
BREAK                : 9 108
CASE                 : 
COLON                : 
COMMA                : 22 23 24 45 46 88
CONDOP               : 
CONSOLE              : 13 111
CONTINUE             : 10 109
DECR                 : 34
DELETE               : 
DIVEQ                : 32
DIVIDE               : 55
DO                   : 
DOT                  : 13 111
DOUBLEEQ             : 66
ELSE                 : 91 92 93
EQ                   : 22 25 28 44 105
EVAL                 : 50 51
EXPONENT             : 57
FOR                  : 97
FUNCTION             : 104 105
GETP                 : 
GETPROP              : 
GT                   : 65
GTE                  : 69
ID                   : 22 23 25 26 28 29 30 31 32 33 34 35 36 37 38 39 40 41 44 81 84 86 97 104 105
IF                   : 90 91 92 93
INCR                 : 33
INTO                 : 54
INTOEQ               : 31
LCOMMENT             : 
LEFTBRACE            : 3 4
LEFTBRACKET          : 44 81
LEFTPAREN            : 13 21 43 50 51 58 86 96 97 104 105 111
LOG                  : 13 111
LSHIFT               : 74
LSHIFTEQ             : 35
LT                   : 64
LTE                  : 68
MINUS                : 53
MINUSEQ              : 30
MOD                  : 56
MODEQ                : 41
NEW                  : 
NOT                  : 59
NOTEQUAL             : 67
NUMBER               : 82
OR                   : 73
OREQ                 : 39
PLUS                 : 52
PLUSEQ               : 29
REGEX                : 
RETURN               : 11
RIGHTBRACE           : 3 4
RIGHTBRACKET         : 44 81
RIGHTPAREN           : 13 21 43 50 51 58 86 96 104 105 111
RSHIFT               : 75
RSHIFTEQ             : 36
SEMICOLON            : 7 8 9 10 11 12 13 14 97 98 99 102 105
SETP                 : 
SETPROP              : 
STREQUAL             : 70
STRING               : 83
STRNEQUAL            : 71
SWITCH               : 
THIS                 : 
TYPEOF               : 80
UNDEFINED            : 85
URSHIFT              : 76
URSHIFTEQ            : 37
VAR                  : 20 105
WHILE                : 96
WITH                 : 
XOREQ                : 40
error                : 

Nonterminals, with rules where they appear

argList              : 86 88 104 105
arrayCall            : 79
arrayList            : 44 45 46
arraydecl            : 24 27 42 46 47
assignlist           : 20 22 23 24
assignment           : 7 21 98 100 106
basicTypes           : 77
block                : 1 51 94
cblock               : 90 91 91 92 93 96 97 104 105
expression           : 11 12 13 22 25 28 29 30 31 32 35 36 37 38 39 40 41 45 48 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 60 61 61 62 62 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 80 81 87 88 90 91 92 93 96 110 111
forloop              : 18
funcdecl             : 19
functioncall         : 14 78 112
if                   : 15 92
ifelse               : 16 93
increment            : 102
initialization       : 98 99
reassignment         : 8 43 99 101 102 103 107
start                : 0
statement            : 5 6 95
statements           : 2 3 5 50
whileloop            : 17

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) block -> . LEFTBRACE statements RIGHTBRACE
    (4) block -> . LEFTBRACE RIGHTBRACE
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . reassignment SEMICOLON
    (9) statement -> . BREAK SEMICOLON
    (10) statement -> . CONTINUE SEMICOLON
    (11) statement -> . RETURN expression SEMICOLON
    (12) statement -> . expression SEMICOLON
    (13) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
    (14) statement -> . functioncall SEMICOLON
    (15) statement -> . if
    (16) statement -> . ifelse
    (17) statement -> . whileloop
    (18) statement -> . forloop
    (19) statement -> . funcdecl
    (106) statement -> . assignment
    (107) statement -> . reassignment
    (108) statement -> . BREAK
    (109) statement -> . CONTINUE
    (110) statement -> . expression
    (111) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
    (112) statement -> . functioncall
    (20) assignment -> . VAR assignlist
    (21) assignment -> . LEFTPAREN assignment RIGHTPAREN
    (28) reassignment -> . ID EQ expression
    (29) reassignment -> . ID PLUSEQ expression
    (30) reassignment -> . ID MINUSEQ expression
    (31) reassignment -> . ID INTOEQ expression
    (32) reassignment -> . ID DIVEQ expression
    (33) reassignment -> . ID INCR
    (34) reassignment -> . ID DECR
    (35) reassignment -> . ID LSHIFTEQ expression
    (36) reassignment -> . ID RSHIFTEQ expression
    (37) reassignment -> . ID URSHIFTEQ expression
    (38) reassignment -> . ID ANDEQ expression
    (39) reassignment -> . ID OREQ expression
    (40) reassignment -> . ID XOREQ expression
    (41) reassignment -> . ID MODEQ expression
    (42) reassignment -> . arraydecl
    (43) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (51) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression INTO expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression MOD expression
    (57) expression -> . expression EXPONENT expression
    (58) expression -> . LEFTPAREN expression RIGHTPAREN
    (59) expression -> . NOT expression
    (60) expression -> . expression BINAND expression
    (61) expression -> . expression BINOR expression
    (62) expression -> . expression BINXOR expression
    (63) expression -> . BINNOT expression
    (64) expression -> . expression LT expression
    (65) expression -> . expression GT expression
    (66) expression -> . expression DOUBLEEQ expression
    (67) expression -> . expression NOTEQUAL expression
    (68) expression -> . expression LTE expression
    (69) expression -> . expression GTE expression
    (70) expression -> . expression STREQUAL expression
    (71) expression -> . expression STRNEQUAL expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . expression LSHIFT expression
    (75) expression -> . expression RSHIFT expression
    (76) expression -> . expression URSHIFT expression
    (77) expression -> . basicTypes
    (78) expression -> . functioncall
    (79) expression -> . arrayCall
    (80) expression -> . TYPEOF expression
    (86) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (90) if -> . IF expression cblock
    (91) ifelse -> . IF expression cblock ELSE cblock
    (92) ifelse -> . IF expression cblock ELSE if
    (93) ifelse -> . IF expression cblock ELSE ifelse
    (96) whileloop -> . WHILE LEFTPAREN expression RIGHTPAREN cblock
    (97) forloop -> . FOR LEFTPAREN ID SEMICOLON cblock
    (104) funcdecl -> . FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
    (105) funcdecl -> . VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
    (44) arraydecl -> . ID EQ LEFTBRACKET arrayList RIGHTBRACKET
    (82) basicTypes -> . NUMBER
    (83) basicTypes -> . STRING
    (84) basicTypes -> . ID
    (85) basicTypes -> . UNDEFINED
    (81) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    LEFTBRACE       shift and go to state 4
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    RETURN          shift and go to state 10
    CONSOLE         shift and go to state 12
    VAR             shift and go to state 20
    LEFTPAREN       shift and go to state 13
    ID              shift and go to state 21
    EVAL            shift and go to state 23
    NOT             shift and go to state 24
    BINNOT          shift and go to state 25
    TYPEOF          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    FUNCTION        shift and go to state 32
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    UNDEFINED       shift and go to state 35

    start                          shift and go to state 1
    block                          shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 5
    assignment                     shift and go to state 6
    reassignment                   shift and go to state 7
    expression                     shift and go to state 11
    functioncall                   shift and go to state 14
    if                             shift and go to state 15
    ifelse                         shift and go to state 16
    whileloop                      shift and go to state 17
    forloop                        shift and go to state 18
    funcdecl                       shift and go to state 19
    arraydecl                      shift and go to state 22
    basicTypes                     shift and go to state 26
    arrayCall                      shift and go to state 27

state 1

    (0) S' -> start .



state 2

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 3

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 4

    (3) block -> LEFTBRACE . statements RIGHTBRACE
    (4) block -> LEFTBRACE . RIGHTBRACE
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . reassignment SEMICOLON
    (9) statement -> . BREAK SEMICOLON
    (10) statement -> . CONTINUE SEMICOLON
    (11) statement -> . RETURN expression SEMICOLON
    (12) statement -> . expression SEMICOLON
    (13) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
    (14) statement -> . functioncall SEMICOLON
    (15) statement -> . if
    (16) statement -> . ifelse
    (17) statement -> . whileloop
    (18) statement -> . forloop
    (19) statement -> . funcdecl
    (106) statement -> . assignment
    (107) statement -> . reassignment
    (108) statement -> . BREAK
    (109) statement -> . CONTINUE
    (110) statement -> . expression
    (111) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
    (112) statement -> . functioncall
    (20) assignment -> . VAR assignlist
    (21) assignment -> . LEFTPAREN assignment RIGHTPAREN
    (28) reassignment -> . ID EQ expression
    (29) reassignment -> . ID PLUSEQ expression
    (30) reassignment -> . ID MINUSEQ expression
    (31) reassignment -> . ID INTOEQ expression
    (32) reassignment -> . ID DIVEQ expression
    (33) reassignment -> . ID INCR
    (34) reassignment -> . ID DECR
    (35) reassignment -> . ID LSHIFTEQ expression
    (36) reassignment -> . ID RSHIFTEQ expression
    (37) reassignment -> . ID URSHIFTEQ expression
    (38) reassignment -> . ID ANDEQ expression
    (39) reassignment -> . ID OREQ expression
    (40) reassignment -> . ID XOREQ expression
    (41) reassignment -> . ID MODEQ expression
    (42) reassignment -> . arraydecl
    (43) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (51) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression INTO expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression MOD expression
    (57) expression -> . expression EXPONENT expression
    (58) expression -> . LEFTPAREN expression RIGHTPAREN
    (59) expression -> . NOT expression
    (60) expression -> . expression BINAND expression
    (61) expression -> . expression BINOR expression
    (62) expression -> . expression BINXOR expression
    (63) expression -> . BINNOT expression
    (64) expression -> . expression LT expression
    (65) expression -> . expression GT expression
    (66) expression -> . expression DOUBLEEQ expression
    (67) expression -> . expression NOTEQUAL expression
    (68) expression -> . expression LTE expression
    (69) expression -> . expression GTE expression
    (70) expression -> . expression STREQUAL expression
    (71) expression -> . expression STRNEQUAL expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . expression LSHIFT expression
    (75) expression -> . expression RSHIFT expression
    (76) expression -> . expression URSHIFT expression
    (77) expression -> . basicTypes
    (78) expression -> . functioncall
    (79) expression -> . arrayCall
    (80) expression -> . TYPEOF expression
    (86) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (90) if -> . IF expression cblock
    (91) ifelse -> . IF expression cblock ELSE cblock
    (92) ifelse -> . IF expression cblock ELSE if
    (93) ifelse -> . IF expression cblock ELSE ifelse
    (96) whileloop -> . WHILE LEFTPAREN expression RIGHTPAREN cblock
    (97) forloop -> . FOR LEFTPAREN ID SEMICOLON cblock
    (104) funcdecl -> . FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
    (105) funcdecl -> . VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
    (44) arraydecl -> . ID EQ LEFTBRACKET arrayList RIGHTBRACKET
    (82) basicTypes -> . NUMBER
    (83) basicTypes -> . STRING
    (84) basicTypes -> . ID
    (85) basicTypes -> . UNDEFINED
    (81) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    RIGHTBRACE      shift and go to state 37
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    RETURN          shift and go to state 10
    CONSOLE         shift and go to state 12
    VAR             shift and go to state 20
    LEFTPAREN       shift and go to state 13
    ID              shift and go to state 21
    EVAL            shift and go to state 23
    NOT             shift and go to state 24
    BINNOT          shift and go to state 25
    TYPEOF          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    FUNCTION        shift and go to state 32
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    UNDEFINED       shift and go to state 35

    statements                     shift and go to state 36
    statement                      shift and go to state 5
    assignment                     shift and go to state 6
    reassignment                   shift and go to state 7
    expression                     shift and go to state 11
    functioncall                   shift and go to state 14
    if                             shift and go to state 15
    ifelse                         shift and go to state 16
    whileloop                      shift and go to state 17
    forloop                        shift and go to state 18
    funcdecl                       shift and go to state 19
    arraydecl                      shift and go to state 22
    basicTypes                     shift and go to state 26
    arrayCall                      shift and go to state 27

state 5

    (5) statements -> statement . statements
    (6) statements -> statement .
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . reassignment SEMICOLON
    (9) statement -> . BREAK SEMICOLON
    (10) statement -> . CONTINUE SEMICOLON
    (11) statement -> . RETURN expression SEMICOLON
    (12) statement -> . expression SEMICOLON
    (13) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
    (14) statement -> . functioncall SEMICOLON
    (15) statement -> . if
    (16) statement -> . ifelse
    (17) statement -> . whileloop
    (18) statement -> . forloop
    (19) statement -> . funcdecl
    (106) statement -> . assignment
    (107) statement -> . reassignment
    (108) statement -> . BREAK
    (109) statement -> . CONTINUE
    (110) statement -> . expression
    (111) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
    (112) statement -> . functioncall
    (20) assignment -> . VAR assignlist
    (21) assignment -> . LEFTPAREN assignment RIGHTPAREN
    (28) reassignment -> . ID EQ expression
    (29) reassignment -> . ID PLUSEQ expression
    (30) reassignment -> . ID MINUSEQ expression
    (31) reassignment -> . ID INTOEQ expression
    (32) reassignment -> . ID DIVEQ expression
    (33) reassignment -> . ID INCR
    (34) reassignment -> . ID DECR
    (35) reassignment -> . ID LSHIFTEQ expression
    (36) reassignment -> . ID RSHIFTEQ expression
    (37) reassignment -> . ID URSHIFTEQ expression
    (38) reassignment -> . ID ANDEQ expression
    (39) reassignment -> . ID OREQ expression
    (40) reassignment -> . ID XOREQ expression
    (41) reassignment -> . ID MODEQ expression
    (42) reassignment -> . arraydecl
    (43) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (51) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression INTO expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression MOD expression
    (57) expression -> . expression EXPONENT expression
    (58) expression -> . LEFTPAREN expression RIGHTPAREN
    (59) expression -> . NOT expression
    (60) expression -> . expression BINAND expression
    (61) expression -> . expression BINOR expression
    (62) expression -> . expression BINXOR expression
    (63) expression -> . BINNOT expression
    (64) expression -> . expression LT expression
    (65) expression -> . expression GT expression
    (66) expression -> . expression DOUBLEEQ expression
    (67) expression -> . expression NOTEQUAL expression
    (68) expression -> . expression LTE expression
    (69) expression -> . expression GTE expression
    (70) expression -> . expression STREQUAL expression
    (71) expression -> . expression STRNEQUAL expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . expression LSHIFT expression
    (75) expression -> . expression RSHIFT expression
    (76) expression -> . expression URSHIFT expression
    (77) expression -> . basicTypes
    (78) expression -> . functioncall
    (79) expression -> . arrayCall
    (80) expression -> . TYPEOF expression
    (86) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (90) if -> . IF expression cblock
    (91) ifelse -> . IF expression cblock ELSE cblock
    (92) ifelse -> . IF expression cblock ELSE if
    (93) ifelse -> . IF expression cblock ELSE ifelse
    (96) whileloop -> . WHILE LEFTPAREN expression RIGHTPAREN cblock
    (97) forloop -> . FOR LEFTPAREN ID SEMICOLON cblock
    (104) funcdecl -> . FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
    (105) funcdecl -> . VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
    (44) arraydecl -> . ID EQ LEFTBRACKET arrayList RIGHTBRACKET
    (82) basicTypes -> . NUMBER
    (83) basicTypes -> . STRING
    (84) basicTypes -> . ID
    (85) basicTypes -> . UNDEFINED
    (81) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    $end            reduce using rule 6 (statements -> statement .)
    RIGHTBRACE      reduce using rule 6 (statements -> statement .)
    RIGHTPAREN      reduce using rule 6 (statements -> statement .)
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    RETURN          shift and go to state 10
    CONSOLE         shift and go to state 12
    VAR             shift and go to state 20
    LEFTPAREN       shift and go to state 13
    ID              shift and go to state 21
    EVAL            shift and go to state 23
    NOT             shift and go to state 24
    BINNOT          shift and go to state 25
    TYPEOF          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    FUNCTION        shift and go to state 32
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    UNDEFINED       shift and go to state 35

    statement                      shift and go to state 5
    statements                     shift and go to state 38
    assignment                     shift and go to state 6
    reassignment                   shift and go to state 7
    expression                     shift and go to state 11
    functioncall                   shift and go to state 14
    if                             shift and go to state 15
    ifelse                         shift and go to state 16
    whileloop                      shift and go to state 17
    forloop                        shift and go to state 18
    funcdecl                       shift and go to state 19
    arraydecl                      shift and go to state 22
    basicTypes                     shift and go to state 26
    arrayCall                      shift and go to state 27

state 6

    (7) statement -> assignment . SEMICOLON
    (106) statement -> assignment .
